# mnn-sys

./: .gitmodules  Cargo.toml  build.rs  wrapper.cpp  wrapper.h
src/: lib.rs
